# studatio

./: .gitignore  .mailmap  .pre-commit-config.yaml  LICENSE.txt  README.md  cal_handler.py  enums.py  events.py  main.py  pyproject.toml  requirements.txt  vendorize.toml
.github/workflows/: main.yml  publish.yml  publishtestpypi.yml
.hypothesis/examples/036cbf4271a8cfa2/: 152597382078f540  29d4e4f7a1dcb2b8  2ce3c759db5b15c9  3f2a516fcd1abd6a  3fe57361902870eb  47d2c8db2c47d1cd  51d36cfcd527ff5d  6b1e9ee786977817  97c1709417b78629  a1db8aa2360b858d  ae76e9efc340657f  b1113c0cd2d3f9ec  de323f0d5d4fa96e  e046eec7445c1f50
.hypothesis/examples/1f0bb98cd2dd7e2b/: 1f03795be259d375  491d1c4e5e6ed22e  54479ef063744351  8668ece117029b0e  97cfce33b8bc3a15  b028b1ec48e9b885  c2b12c4f7ed6ad96  d599c22c085c73c2  dd0c71d8724a0dd5  dd94435ad0bb1afc  ea78998a4a57bd75  f77e397bf2d2962e  fe4b94cc0a65174e
.hypothesis/examples/31a697e6d6ae2dd1/: 039ef980f1fb0322  144158e93aab2acc  2974a9761906a23f  4988c6d788bd80bb  7f3d79b0d7a5fb7f  85854e6aa9cb6eda  9091ca6362e01350  d8152e431f08246e  e16c97adc7fa0198  f02c2f9b6a12e638
.hypothesis/examples/32b4d1b75e36f1b9/: f461396cd476863e
.hypothesis/examples/372fb59d1de13296/: 0e3c532484c8ce31  1dc36d1fd28e269d  2302e9f659f82119  4f495317300a872d  770fef2ad1663460  89cef0d3343caf43  d1b36bea3ca95d22  d47f6c8283398cfc  ed483f2f4a3870e8
.hypothesis/examples/41d1d079e4b4d179/: 032f3d5514cbef6d  0b32b30e3c30a823  0c4b52274ae7ee14  1d35581ea9811cbb  2c953e66dd5f3181  2ce270d3b9bd62cd  5525bc342645c21f  7aaf93bb17752073  819a8886fac9c562  84e16809e0e3b0a8  c9503aa25048337f  d400a5ebd84cff28  decc420140c8bf5b  f3253565d548cec1
.hypothesis/examples/535d544b17449ae3/: 0f2443c54578d43e  1d1dbddbdb415943  379ac3010832f972  44e4f2b865255563  77b5a0c15f9561b9  79c80d950c99a86f  c82c0980c2f5d3a8  d68e718208827c80  ee2e09a29a749a09  f3cc125774199443  fcb26a81272b7083
src/: cal_handler.py  enums.py  events.py
studatio/: cal_handler.py  cfg.py  config_handler.py  enums.py  events.py  main.py  storage.py  user_config.py
tests/: .coveragerc  conftest.py  strategies.py  test_cal_handler.py  test_cli.py  test_events.py  test_storage.py  test_user_config.py
tests/data/: events.ical
(+195 files in other folders)
