[tool.poetry]
name = "studatio"
version = "0.1.0"
description = "Personal tool for my violin teaching database"
authors = ["Eliza Wilson <elizaaverywilson@gmail.com"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyperclip = "^1.8.2"
icalevents = {git = "https://github.com/jazzband/icalevents", rev = "412f256"}
tomlkit = "^0.11.4"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
